# execution26

./: .clang-format  .clang-tidy  .cmake-format  .codespellignore  .codespellrc  .doxy-config  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE.txt  Makefile  README.md  allocator__aware__move_8hpp_source.html  almost__scheduler_8hpp_source.html  annotated.html  apply__sender_8hpp_source.html  as__awaitable_8hpp_source.html  as__except__ptr_8hpp_source.html  atomic__intrusive__stack_8hpp_source.html  await__result__type_8hpp_source.html  await__suspend__result_8hpp_source.html  awaitable__sender_8hpp_source.html  basic__operation_8hpp_source.html  basic__receiver_8hpp_source.html  basic__sender_8hpp_source.html  basic__state_8hpp_source.html  call__result__t_8hpp_source.html  callable_8hpp_source.html  check__type__alias__exist_8hpp_source.html  child__type_8hpp_source.html  class__type_8hpp_source.html  classbeman_1_1execution26_1_1inplace__stop__callback-members.html  classbeman_1_1execution26_1_1inplace__stop__callback.html  classbeman_1_1execution26_1_1inplace__stop__callback__coll__graph.map  classbeman_1_1execution26_1_1inplace__stop__callback__coll__graph.md5  classbeman_1_1execution26_1_1inplace__stop__callback__inherit__graph.map  classbeman_1_1execution26_1_1inplace__stop__callback__inherit__graph.md5  classbeman_1_1execution26_1_1inplace__stop__source-members.html  classbeman_1_1execution26_1_1inplace__stop__source.html  (+311 more)
examples/: CMakeLists.txt  allocator.cpp  doc-just.cpp  doc-just_error.cpp  doc-just_stopped.cpp  intro-1-hello-world.cpp  intro-2-hello-async.cpp  intro-5-consumer.cpp  intro-timer.hpp  just_stopped.cpp  modules.cpp  playground.cpp  sender-demo.cpp  stop_token.cpp  stopping.cpp  when_all-cancel.cpp
src/Beman/Execution26/tests/: CMakeLists.txt  allocator-requirements-general.pass.cpp  exec-domain-default.pass.cpp  exec-fwd-env.pass.cpp  exec-get-allocator.pass.cpp  exec-get-compl-sched.pass.cpp  exec-get-domain.pass.cpp  exec-get-env.pass.cpp  exec-get-stop-token.pass.cpp  exec-getcomplsigs.pass.cpp  exec-opstate-start.pass.cpp  exec-opstate.pass.cpp  exec-recv.pass.cpp  exec-sched.pass.cpp  exec-set-error.pass.cpp  exec-set-stopped.pass.cpp  exec-set-value.pass.cpp  exec-snd-concepts.pass.cpp  exec-snd-expos.pass.cpp  exec-snd-transform.pass.cpp  exec-utils-cmplsigs.pass.cpp  execution-queryable-concept.pass.cpp  execution-syn.pass.cpp  function-objects.pass.cpp  functional-syn.pass.cpp  queryable.pass.cpp  stopcallback-cons.pass.cpp  stopcallback-general.pass.cpp  stopcallback-inplace-cons.pass.cpp  stopcallback-inplace-general.pass.cpp  stopcallback.pass.cpp  stopsource-inplace-cons.pass.cpp  stopsource-inplace-general.pass.cpp  stopsource-inplace-mem.pass.cpp  stopsource-inplace.pass.cpp  stopsource-mem.pass.cpp  stopsource.pass.cpp  stoptoken-concepts.pass.cpp  stoptoken-general.pass.cpp  stoptoken-inplace-general.pass.cpp  (+9 more)
src/beman/execution26/: CMakeLists.txt  execution.cpp  execution.cppm
src/beman/execution26/tests/: CMakeLists.txt  allocator-requirements-general.pass.cpp  exec-awaitable.pass.cpp  exec-connect.pass.cpp  exec-continues-on.pass.cpp  exec-domain-default.pass.cpp  exec-fwd-env.pass.cpp  exec-general.pass.cpp  exec-get-allocator.pass.cpp  exec-get-compl-sched.pass.cpp  exec-get-delegation-scheduler.pass.cpp  exec-get-domain.pass.cpp  exec-get-env.pass.cpp  exec-get-scheduler.pass.cpp  exec-get-stop-token.pass.cpp  exec-getcomplsigs.pass.cpp  exec-into-variant.pass.cpp  exec-just.pass.cpp  exec-let.pass.cpp  exec-opstate-start.pass.cpp  exec-opstate.pass.cpp  exec-read-env.pass.cpp  exec-recv-concepts.pass.cpp  exec-recv.pass.cpp  exec-run-loop-general.pass.cpp  exec-run-loop-types.pass.cpp  exec-sched.pass.cpp  exec-schedule-from.pass.cpp  exec-schedule.pass.cpp  exec-scounting.pass.cpp  exec-set-error.pass.cpp  exec-set-stopped.pass.cpp  exec-set-value.pass.cpp  exec-snd-apply.pass.cpp  exec-snd-concepts.pass.cpp  exec-snd-expos.pass.cpp  exec-snd-transform.pass.cpp  exec-starts-on.pass.cpp  exec-sync-wait.pass.cpp  exec-then.pass.cpp  (+42 more)
test/: CMakeLists.txt  function-objects.pass.cpp  stopcallback-cons.pass.cpp  stopcallback-general.pass.cpp  stopcallback-inplace-cons.pass.cpp  stopcallback-inplace-general.pass.cpp  stopcallback-inplace.pass.cpp  stopcallback.pass.cpp  stopsource-cons.pass.cpp  stopsource-general.pass.cpp  stopsource-inplace-cons.pass.cpp  stopsource-inplace-general.pass.cpp  stopsource-inplace-mem.pass.cpp  stopsource-mem.pass.cpp  stopsource.pass.cpp  stoptoken-concepts.pass.cpp  stoptoken-general.pass.cpp  stoptoken-inplace-general.pass.cpp  stoptoken-inplace-members.pass.cpp  stoptoken-inplace.pass.cpp  stoptoken-mem.pass.cpp  stoptoken-never-general.pass.cpp  stoptoken.pass.cpp  test-execution.hpp  thread-stoptoken-intro.pass.cpp  thread-stoptoken-syn.compile.pass.cpp  thread-stoptoken.pass.cpp  thread.pass.cpp  utilities.pass.cpp
tests/beman/execution26/: CMakeLists.txt  allocator-requirements-general.test.cpp  async-concurrent-queue.test.cpp  basic-concurrent-queue.test.cpp  bounded-queue.test.cpp  concurrent-queue.test.cpp  conqueue-errc.test.cpp  conqueue-error.test.cpp  exec-awaitable.test.cpp  exec-connect.test.cpp  exec-continues-on.test.cpp  exec-domain-default.test.cpp  exec-fwd-env.test.cpp  exec-general.test.cpp  exec-get-allocator.test.cpp  exec-get-compl-sched.test.cpp  exec-get-delegation-scheduler.test.cpp  exec-get-domain.test.cpp  exec-get-env.test.cpp  exec-get-scheduler.test.cpp  exec-get-stop-token.test.cpp  exec-getcomplsigs.test.cpp  exec-into-variant.test.cpp  exec-just.test.cpp  exec-let.test.cpp  exec-opstate-start.test.cpp  exec-opstate.test.cpp  exec-read-env.test.cpp  exec-recv-concepts.test.cpp  exec-recv.test.cpp  exec-run-loop-general.test.cpp  exec-run-loop-types.test.cpp  exec-sched.test.cpp  exec-schedule-from.test.cpp  exec-schedule.test.cpp  exec-scounting.test.cpp  exec-set-error.test.cpp  exec-set-stopped.test.cpp  exec-set-value.test.cpp  exec-snd-apply.test.cpp  (+70 more)
tests/beman/execution26/include/test/: common.hpp  execution.hpp  (+1 more)
(+287 files in other folders)
